--- a/GhostHunter/res/layout/activity_main.xml
+++ b/GhostHunter/res/layout/activity_main.xml
@@ -5,8 +5,18 @@
     tools:context="${relativePackage}.${activityClass}" >
 
     <TextView
+        android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/hello_world" />
+
+    <Button
+        android:id="@+id/buttonStart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:text="@string/button_start" 
+        android:onClick = "onClick"/>
 
 </RelativeLayout>
