--- a/GhostHunter/res/layout/activity_new.xml
+++ b/GhostHunter/res/layout/activity_new.xml
@@ -11,13 +11,12 @@
         android:text="@string/hello_world" />
 
     <ImageView
-        android:contentDescription="@string/desc"
         android:id="@+id/dPad"
         android:layout_width="120dp"
         android:layout_height="120dp"
         android:layout_alignBottom="@+id/downButton"
         android:layout_alignRight="@+id/rightButton"
-        android:src="@drawable/dPad" />
+        android:src="@drawable/dpad" />
 
     <Button
         android:id="@+id/downButton"
@@ -70,14 +69,13 @@
         android:layout_marginTop="30dp" />
 
     <ImageView
-        android:contentDescription="@string/desc"
         android:id="@+id/padA"
         android:layout_width="60dp"
         android:layout_height="60dp"
         android:layout_alignBottom="@+id/leftButton"
         android:layout_alignParentRight="true"
         android:layout_marginRight="35dp"
-        android:src="@drawable/Xbox360_Button_A" />
+        android:src="@drawable/buttona" />
 
     <ImageView
         android:id="@+id/padB"
@@ -86,7 +84,6 @@
         android:layout_below="@+id/buttonA"
         android:layout_alignParentRight="true"
         android:layout_marginRight="110dp"
-        android:contentDescription="@string/desc"
-        android:src="@drawable/Xbox360_Button_B" />
+        android:src="@drawable/buttonb" />
 
 </RelativeLayout>
